# project6

./: LICENSE  README.md  __init__.py  core.py  pyproject.toml
